# media-vault

./: .gitignore  LICENSE  Makefile  README.md  README_GETTING_STARTED.md  pyproject.toml
config/: device_mappings.yaml
scripts/: create_structure.sh  new_shoot.sh  scaffold_project.sh
src/media_toolkit/: __init__.py  analyzer.py  catalog.py  link_into_project.py  migrator.py  models.py  verifier.py
src/media_toolkit/utils/: ffprobe.py  hash.py
